Added A delete option on photo page
User can now delete a photo that they uploaded if they want to.
