# Photographers'-Portfolio/public/docs/openapi.yaml
@@ -27,13 +27,13 @@ paths:
           schema:
             type: string
       responses:
-        302:
+        200:
           description: ''
           content:
             text/plain:
               schema:
                 type: string
-                example: "<!DOCTYPE html>\n<html>\n    <head>\n        <meta charset=\"UTF-8\" />\n        <meta http-equiv=\"refresh\" content=\"0;url='http://localhost/login'\" />\n\n        <title>Redirecting to http://localhost/login</title>\n    </head>\n    <body>\n        Redirecting to <a href=\"http://localhost/login\">http://localhost/login</a>.\n    </body>\n</html>"
+                example: '{ return \Illuminate\View\View }'
       tags:
         - 'NewsfeedController class'
       security: []
@@ -58,12 +58,12 @@ paths:
             type: string
       responses:
         200:
-          description: failure
+          description: ''
           content:
             text/plain:
               schema:
                 type: string
-                example: '{unable to follow user}'
+                example: '{ return \Illuminate\View\View }'
       tags:
         - 'FollowController class'
       security: []
@@ -72,7 +72,7 @@ paths:
         in: path
         name: followingUserId
         description: 'The Id of the user who is being followed.'
-        example: 16
+        example: 8
         required: true
         schema:
           type: integer
@@ -97,12 +97,12 @@ paths:
             type: string
       responses:
         200:
-          description: failure
+          description: success
           content:
             text/plain:
               schema:
                 type: string
-                example: '{unable to unfollow user}'
+                example: '{ return \Illuminate\View\View }'
       tags:
         - 'FollowController class'
       security: []
@@ -111,7 +111,54 @@ paths:
         in: path
         name: unfollowingUserId
         description: 'The Id of the user who is being unfollowed.'
-        example: 9
+        example: 16
+        required: true
+        schema:
+          type: integer
+  '/follower-page/{user}':
+    get:
+      summary: 'followerPage(): Displays a page containing the follower and following list of an user'
+      description: "This method takes '$userId' as a parameter from the URL.This user id is of the user whos\nfollower/following page is being viewed.<br>\nThis is 'userId' is then used to find which user are following that userId and also to find\nwhich users are being followed by that userId.<br>\nFinally, the function returns a view of the 'followerpage' along with two collection\nobjects which contains the list of followers and the list of user being followed by\nthat particular userId."
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: ''
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: '{ return \Illuminate\View\View }'
+      tags:
+        - 'FollowController class'
+      security: []
+    parameters:
+      -
+        in: path
+        name: user
+        description: ''
+        example: accusamus
+        required: true
+        schema:
+          type: string
+      -
+        in: path
+        name: userId
+        description: 'User Id of the user whos follower and following list is being displayed.'
+        example: 13
         required: true
         schema:
           type: integer
@@ -141,7 +188,7 @@ paths:
             text/plain:
               schema:
                 type: string
-                example: '{"message": form data failed to validate}'
+                example: '{ form data failed to validate }'
       tags:
         - 'PhotoController class'
       requestBody:
@@ -154,7 +201,7 @@ paths:
                 caption:
                   type: string
                   description: 'The caption of the photo.'
-                  example: cum
+                  example: cumque
                 photo:
                   type: string
                   format: binary
@@ -197,7 +244,7 @@ paths:
         in: path
         name: photoId
         description: 'The ID of the photo'
-        example: 20
+        example: 6
         required: true
         schema:
           type: integer
@@ -227,10 +274,49 @@ paths:
             text/plain:
               schema:
                 type: string
-                example: "<!DOCTYPE html>\r\n<html lang=\"en\">\r\n<head>\r\n    <meta charset=\"UTF-8\">\r\n    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\r\n    <meta http-equiv=\"X-UA-Compatible\" content=\"ie=edge\">\r\n    <title>Upload Photo</title>\r\n\r\n    <link rel=\"stylesheet\" href=\"http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css\">\r\n    <link href=\"https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css\" rel=\"stylesheet\">\r\n    <script src=\"https://kit.fontawesome.com/8aa2fd0685.js\" crossorigin=\"anonymous\"></script>\r\n    <link rel=\"stylesheet\" href=\"http://localhost/css/photoupload.css\">\r\n    <link rel=\"stylesheet\" href=\"http://localhost/css/header.css\">\r\n    <link rel=\"stylesheet\" href=\"http://localhost/css/footer.css\">\r\n</head>\r\n<body>\r\n\r\n<!---  Header   -->\r\n<Header>\r\n    <div>\r\n        <nav class=\"navbar navbar-default navigation-clean-button\">\r\n            <div class=\"container\">\r\n                <div class=\"navbar-header\"><a class=\"navbar-brand\" href=\"#\">Photographers' Porfolio</a>\r\n                    <button class=\"navbar-toggle collapsed\" data-toggle=\"collapse\" data-target=\"#navcol-1\">\r\n                    <span class=\"sr-only\">Toggle navigation</span><span class=\"icon-bar\"></span><span class=\"icon-bar\"></span>\r\n                    <span class=\"icon-bar\"></span></button>\r\n                </div>\r\n                <div class=\"collapse navbar-collapse navbar-left\" id=\"navcol-1\">\r\n                    <ul class=\"nav navbar-nav\">\r\n                        <li><a href=\"/newsfeed\">Home</a></li>\r\n\r\n                        <!-- Checking if user is logged in -->\r\n                                                <!-- Checking if user is logged in -->\r\n\r\n                        <li><a href=\"/gallery/\">Gallery</a></li>\r\n                    </ul>\r\n\r\n                    <!-- Checking if user is not logged in -->\r\n                                            <p class=\"navbar-text navbar-right actions\"><a class=\"navbar-link login\" href=\"/login\">Log In</a> \r\n                        <a class=\"btn btn-default action-button\" role=\"button\" href=\"/registration\">Sign Up</a></p>   \r\n                                        \r\n                    <ul class=\"wrap\">\r\n                        <div class=\"search\">\r\n                           <input type=\"text\" class=\"searchTerm\" placeholder=\"Search By Username...\">\r\n                           <button type=\"submit\" class=\"searchButton\">\r\n                             <i class=\"fa fa-search\"></i>\r\n                          </button>\r\n                        </div>\r\n                    </ul>\r\n                </div>\r\n                \r\n            </div>\r\n        </nav>\r\n    </div>\r\n</Header>\r\n<!---  Header   -->\r\n<!-- Photo Uplaod Form -->\r\n\r\n    <h4 class=\"form-title\">Upload Photo</h4>\r\n\r\n    <!-- View Photo Upload Errors if any-->\r\n              <!-- View Photo Upload Errors if any-->\r\n\r\n    <div class=\"form-body\">\r\n\r\n        <form action=\"/photo-upload\" method=\"POST\" enctype=\"multipart/form-data\">\r\n        <input type=\"hidden\" name=\"_token\" value=\"yT5JSl1j3wN8EFn4fEM0X4jnpauaJgeIu1IZQDlM\">    \r\n            <div class=\"form-group\">\r\n                <label for=\"caption-text\" class=\"col-form-label\" >Caption</label>\r\n                <textarea class=\"form-control\" id=\"caption-text\" rows=\"5\" name=\"caption\"></textarea>\r\n            </div>\r\n            \r\n        \r\n            \r\n                <div class=\"file-upload\">\r\n                    <button class=\"file-upload-btn\" type=\"button\" onclick=\"$('.file-upload-input').trigger( 'click' )\">Add Image</button>\r\n                \r\n                    <div class=\"image-upload-wrap\">\r\n                    <input class=\"file-upload-input\" type='file' onchange=\"readURL(this);\" accept=\"image/*\" name=\"photo\" />\r\n                    <div class=\"drag-text\">\r\n                        <h3>Drag and drop a file or select add Image</h3>\r\n                    </div>\r\n                    </div>\r\n                    <div class=\"file-upload-content\">\r\n                    <img class=\"file-upload-image\" src=\"#\" alt=\"your image\" />\r\n                    <div class=\"image-title-wrap\">\r\n                        <button type=\"button\" onclick=\"removeUpload()\" class=\"remove-image\">Remove <span class=\"image-title\">Uploaded Image</span></button>\r\n                    </div>\r\n                    </div>\r\n                </div>\r\n           \r\n            <button type=\"button\" class=\"btn btn-default\" data-dismiss=\"modal\">Close</button>\r\n            <button type=\"submit\" class=\"btn btn-primary\">Upload</button>\r\n            <br><br><br>\r\n        </form>\r\n    </div>   \r\n \r\n <!-- Photo Upload Form -->\r\n <!-- Footer Area Start -->\r\n    <footer class=\"footer-area\">\r\n        <div class=\"container\">\r\n            <div class=\"row\">\r\n                <div class=\"col-12\">\r\n                    <div class=\"footer-content d-flex align-items-center justify-content-between\">\r\n                        <!-- Copywrite Text -->\r\n                        <div class=\"copywrite-text\">\r\n                            <p> Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | <i class=\"fa fa-heart-o\" aria-hidden=\"true\"></i> by <a href=\"#\" target=\"_blank\">Photographer's Portfolio</a></p>\r\n                        </div>\r\n                        <!-- Footer Logo -->\r\n                        <div class=\"footer-logo\">\r\n                            <a href=\"#\"><img src=\"img/core-img/logo2.png\" alt=\"\"></a>\r\n                        </div>\r\n                        <!-- Social Info -->\r\n                    </div>\r\n                </div>\r\n            </div>\r\n        </div>\r\n    </footer>\r\n    <!-- Footer Area End -->\r\n\r\n</body>\r\n\r\n</html>\r\n   <script src=\"https://code.jquery.com/jquery-3.6.0.min.js\" integrity=\"sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=\" crossorigin=\"anonymous\"></script>\r\n   <script src=\"https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js\" integrity=\"sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1\" crossorigin=\"anonymous\"></script>\r\n   <script src=\"http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js\"></script>\r\n   <script src=\"http://localhost/js/photoupload.js\"></script>\r\n</body>\r\n</html>"
+                example: '{ return \Illuminate\View\View }'
       tags:
         - 'PhotoController class'
       security: []
+  '/photo-delete/{photoId}':
+    delete:
+      summary: 'photoDelete(): Deletes a photo from Database.'
+      description: "This methods the parameter '$photoId' from the url, which is the\nphoto id of the photo the user requested to delete.<br>\nUsing this photo id the function finds the photo from the database\nand deletes all the information related to the photo from the database. It\nalso deletes the photo from the storage as well.<br>\nFinally, the function redirects the user to the view of the newsfeed page."
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: success
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: '{ return \Illuminate\View\View }'
+      tags:
+        - 'PhotoController class'
+      security: []
+    parameters:
+      -
+        in: path
+        name: photoId
+        description: 'The ID of the photo'
+        example: 13
+        required: true
+        schema:
+          type: integer
 tags:
   -
     name: 'NewsfeedController class'
